<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/notification_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@color/white"
            android:visibility="gone"
            app:cardCornerRadius="10sp"
            app:cardElevation="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="Extra cars rental accepted your request for Audi RB"/>
            </android.support.v7.widget.CardView>
        <LinearLayout
            android:id="@+id/no_notification_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="20dp"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_notification_yet"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="20dp"/>

        </LinearLayout>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/notifications_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="10dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/register_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/register_button"
            android:gravity="center"
            android:text="@string/create_a_free_account" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>