<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="extra4it.fahmy.com.rentei.Activity.Agency.addCar.AddCarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="?actionBarSize">

            <com.github.captain_miao.optroundcardview.OptRoundCardView
                android:id="@+id/top_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:optRoundCardBottomEdges="false"
                app:optRoundCardCornerRadius="50dp"
                app:optRoundCardLeftBottomCorner="false"
                app:optRoundCardRightBottomCorner="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_back"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:background="@drawable/back_btn" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:gravity="center"
                            android:text="@string/add_a_new_car"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_car_name"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/car_name"
                        android:inputType="textPersonName"
                        android:padding="20dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/et_car_brand"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/car_brand"
                        android:inputType="textPersonName"
                        android:padding="20dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/et_car_model"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/car_model"
                        android:inputType="textPersonName"
                        android:padding="20dp"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_car_price"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/price_per_day"
                        android:inputType="textPersonName"
                        android:padding="20dp"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_car_price_extra"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/price_of_extra_miles"
                        android:inputType="textPersonName"
                        android:padding="20dp"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/et_car_pics"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:background="@drawable/edit_text_background"
                            android:hint="@string/add_3_image_of_car"
                            android:inputType="textPersonName"
                            android:padding="20dp"
                            android:textSize="15sp" />
                        <ImageView
                            android:id="@+id/add_car_pics"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/add_pic"/>
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/cars_pics_recycle"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                    <EditText
                        android:id="@+id/et_car_details"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/describe_the_car_and_your_offer"
                        android:inputType="textPersonName"
                        android:padding="20dp"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_add_car"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/register_button"
                        android:gravity="center"
                        android:text="@string/add_car_btn"
                        android:textColor="@color/white" />
                </LinearLayout>
            </com.github.captain_miao.optroundcardview.OptRoundCardView>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/pics_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            app:cardCornerRadius="5sp"
            app:cardElevation="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/gallery"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/gallery" />

                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/photo_camera" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progress_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:visibility="gone">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi_progress"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:indicatorColor="@color/mainColor"
            app:indicatorName="BallPulseIndicator" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/brands_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        tools:visibility="gone"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/brands_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:clipToPadding="false"
            android:padding="5dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/model_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp"
        tools:visibility="gone"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/models_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:clipToPadding="false"
            android:padding="5dp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>